force-app/main/default/objects/Account/fields/Environics_ID__c.field-meta.xml
<CustomField>
    <fullName>Environics_ID__c</fullName>
    <description>This external Id is used in support of the Birch Hill market data loads, and allows them to more easily tie back to the originating data source.</description>
    <externalId>true</externalId>
    <label>Environics ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>