force-app/main/default/objects/Account/fields/From_Acquired_Company__c.field-meta.xml
<CustomField>
    <fullName>From_Acquired_Company__c</fullName>
    <label>From Acquired Company</label>
    <length>60</length>
    <type>Text</type>
</CustomField>