force-app/main/default/objects/Account/fields/FSA_Mapping__c.field-meta.xml
<CustomField>
    <fullName>FSA_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSA Mapping</label>
    <referenceTo>FSA_Service_Territory_Mapping__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>