force-app/main/default/objects/Account/fields/Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Group_Code__c</fullName>
    <description>To be replaced with Accpac_Customer_Group__c</description>
    <label>Group Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>