force-app/main/default/objects/Account/fields/Has_Service_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Has_Service_Warranty__c</fullName>
    <formula>if((End_Warranty_date__c&lt; TODAY() ||  ISBLANK(End_Warranty_date__c) ), FALSE, TRUE)</formula>
    <label>Has Service Warranty</label>
    <type>Checkbox</type>
</CustomField>