force-app/main/default/objects/Account/fields/Hygiene_Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Hygiene_Operating_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hygiene Operating Hours</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>