force-app/main/default/objects/Account/fields/Hygiene_OperatingHoursId__c.field-meta.xml
<CustomField>
    <fullName>Hygiene_OperatingHoursId__c</fullName>
    <formula>BLANKVALUE( Hygiene_Operating_Hours__c , OperatingHoursId )</formula>
    <label>Hygiene OperatingHoursId</label>
    <type>Text</type>
</CustomField>