force-app/main/default/objects/Account/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <description>Select the appropriate Industry Code from the pick list.</description>
    <inlineHelpText>Industry code is a mandatory field.</inlineHelpText>
    <label>Industry Code</label>
    <length>225</length>
    <type>Text</type>
</CustomField>