force-app/main/default/objects/Account/fields/Install_Survey_Received_by_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Install_Survey_Received_by_Work_Order__c</fullName>
    <label>Install Survey Received by Work Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>