force-app/main/default/objects/Account/fields/Installation_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Installation_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if Installation Survey Sent on an Account level.</description>
    <label>Installation Survey Sent?</label>
    <type>Checkbox</type>
</CustomField>