force-app/main/default/objects/Account/fields/Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency__c</fullName>
    <label>Invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q2 - Quarterly, Invoiced Feb, May, Aug, Nov</fullName>
            </value>
            <value>
                <fullName>M - Monthly</fullName>
                <default>true</default>
                <label>M - Monthly</label>
            </value>
            <value>
                <fullName>Q1 - Quarterly, Invoiced Jan, Apr, Jul, Oct</fullName>
            </value>
            <value>
                <fullName>WN - When Needed</fullName>
            </value>
            <value>
                <fullName>Q3 - Quarterly, Invoiced Mar, Jun, Sep, Dec</fullName>
            </value>
            <value>
                <fullName>M4O - Seasonal Apr-Oct</fullName>
            </value>
            <value>
                <fullName>A12 - Annual - December</fullName>
            </value>
            <value>
                <fullName>A11 - Annual - November</fullName>
            </value>
            <value>
                <fullName>A10 - Annual - October</fullName>
            </value>
            <value>
                <fullName>M93 - Seasonal Sep-Mar</fullName>
            </value>
            <value>
                <fullName>M94 - Seasonal Sep-Apr</fullName>
            </value>
            <value>
                <fullName>M5O - Seasonal May-Oct</fullName>
            </value>
            <value>
                <fullName>SA1 - Semi-Annually, Jan/Jul</fullName>
            </value>
            <value>
                <fullName>A05 - Annual - May</fullName>
            </value>
            <value>
                <fullName>M4D - Seasonal Apr-Dec</fullName>
            </value>
            <value>
                <fullName>A06 - Annual - June</fullName>
            </value>
            <value>
                <fullName>M59 - Seasonal May-Sep</fullName>
            </value>
            <value>
                <fullName>M5N - Seasonal May-Nov</fullName>
            </value>
            <value>
                <fullName>A04 - Annual - April</fullName>
            </value>
            <value>
                <fullName>B1 - Bi-Monthly Odd Months</fullName>
            </value>
            <value>
                <fullName>M68 - Seasonal Jun-Aug</fullName>
            </value>
            <value>
                <fullName>M4N - Seasonal Apr-Nov</fullName>
            </value>
            <value>
                <fullName>M96 - Seasonal Sep-Jun</fullName>
            </value>
            <value>
                <fullName>M12 - Seasonal Jan-Feb</fullName>
            </value>
            <value>
                <fullName>MN4 - Seasonal Nov-Apr</fullName>
            </value>
            <value>
                <fullName>B2 - Bi-Monthly Even Months</fullName>
            </value>
            <value>
                <fullName>M55 - Seasonal May</fullName>
            </value>
            <value>
                <fullName>M44 - Seasonal April</fullName>
            </value>
            <value>
                <fullName>MN3 - Seasonal Nov-Mar</fullName>
            </value>
            <value>
                <fullName>MO4 - Seasonal Oct-Apr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>