force-app/main/default/objects/Account/fields/Invoice_Generation__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Generation__c</fullName>
    <label>Invoice Generation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill at Beginning of Invoice Frequency</fullName>
                <default>true</default>
                <label>Bill at Beginning of Invoice Frequency</label>
            </value>
            <value>
                <fullName>Bill at End of Invoice Frequency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>