force-app/main/default/objects/Account/fields/Invoice_Preference__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Preference__c</fullName>
    <label>Invoice Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>