force-app/main/default/objects/Account/fields/Invoicing_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Email_Address__c</fullName>
    <label>Invoicing Email Address</label>
    <type>Email</type>
</CustomField>