force-app/main/default/objects/Account/fields/Is_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Is_Bill_To__c</fullName>
    <description>Returns true if this is a Bill To Account.</description>
    <formula>(isParent__c || TEXT(Type) = &apos;Prospect&apos;) &amp;&amp; ISBLANK( ParentId )</formula>
    <inlineHelpText>Returns true if this is a Bill To Account.</inlineHelpText>
    <label>Is Bill To</label>
    <type>Checkbox</type>
</CustomField>