force-app/main/default/objects/Account/fields/Is_Multi_Res__c.field-meta.xml
<CustomField>
    <fullName>Is_Multi_Res__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Multi-Res</label>
    <type>Checkbox</type>
</CustomField>