force-app/main/default/objects/Account/fields/IsBillTo__c.field-meta.xml
<CustomField>
    <fullName>IsBillTo__c</fullName>
    <formula>(ISBLANK( AccPac_Account__c )  &amp;&amp;  TEXT( Type ) &lt;&gt; &apos;Customer&apos; ) || ( NOT(CONTAINS(AccPac_Account__c, &quot;-&quot;)))</formula>
    <label>IsBillTo</label>
    <type>Checkbox</type>
</CustomField>