force-app/main/default/objects/Account/fields/isParent__c.field-meta.xml
<CustomField>
    <fullName>isParent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is controlled through a trigger. Indicates if this is a Parent Account by looking at associated children via the Parent Account field. System Admins should be the only ones who can edit and see this field.</inlineHelpText>
    <label>isParent</label>
    <type>Checkbox</type>
</CustomField>