force-app/main/default/objects/Account/fields/isValid__c.field-meta.xml
<CustomField>
    <fullName>isValid__c</fullName>
    <formula>NOT( Inactive__c  ||  On_Hold__c || Parent.Inactive__c || Parent.On_Hold__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isValid</label>
    <type>Checkbox</type>
</CustomField>