force-app/main/default/objects/Account/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <inlineHelpText>Choose the language the customer prefers for any form of communication. It determines the quote pdf language preference.</inlineHelpText>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>