force-app/main/default/objects/Account/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALPINE</fullName>
            </value>
            <value>
                <fullName>Birch Hill Referral</fullName>
            </value>
            <value>
                <fullName>Blitz Day</fullName>
            </value>
            <value>
                <fullName>Call In</fullName>
            </value>
            <value>
                <fullName>Candy Cane</fullName>
            </value>
            <value>
                <fullName>CHD Lead List</fullName>
            </value>
            <value>
                <fullName>Chem SME</fullName>
            </value>
            <value>
                <fullName>Citron Leads Site</fullName>
            </value>
            <value>
                <fullName>Cold Calls</fullName>
            </value>
            <value>
                <fullName>Compass</fullName>
            </value>
            <value>
                <fullName>D&amp;B Lead List</fullName>
            </value>
            <value>
                <fullName>Data.com</fullName>
            </value>
            <value>
                <fullName>Dine Safe</fullName>
            </value>
            <value>
                <fullName>Field Agent</fullName>
            </value>
            <value>
                <fullName>GOJO ES Promo</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pardot Email Blast</fullName>
            </value>
            <value>
                <fullName>Pest Off</fullName>
            </value>
            <value>
                <fullName>Referrals</fullName>
            </value>
            <value>
                <fullName>Salesforce Maps</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Sani-Service</fullName>
            </value>
            <value>
                <fullName>Service Consultant</fullName>
            </value>
            <value>
                <fullName>Sodexo</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>