force-app/main/default/objects/Account/fields/Lead_Source_Technician_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Technician_Name__c</fullName>
    <label>Lead Source Technician Name</label>
    <type>TextArea</type>
</CustomField>