force-app/main/default/objects/Account/fields/Life_Safety_Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Life_Safety_Operating_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Life Safety Operating Hours</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Accounts (Life Safety Operating Hours)</relationshipLabel>
    <relationshipName>Accounts_LifeSafety</relationshipName>
    <type>Lookup</type>
</CustomField>