force-app/main/default/objects/Account/fields/Life_Safety_OperatingHoursId__c.field-meta.xml
<CustomField>
    <fullName>Life_Safety_OperatingHoursId__c</fullName>
    <formula>BLANKVALUE( Life_Safety_Operating_Hours__c , OperatingHoursId )</formula>
    <label>Life Safety OperatingHoursId</label>
    <type>Text</type>
</CustomField>