force-app/main/default/objects/Account/fields/Location_Summary_Overview__c.field-meta.xml
<CustomField>
    <fullName>Location_Summary_Overview__c</fullName>
    <formula>IF
(RecordType.Name = &apos;Customer Ship To&apos;,
 HYPERLINK(&quot;/one/one.app?source=alohaHeader#/sObject/00O3Z000005BXSaUAO/view?fv0=&quot; &amp; Id, &quot;Open Report&quot;), 
 HYPERLINK(&quot;/one/one.app?source=alohaHeader#/sObject/00O3Z000005BXSXUA4/view?fv0=&quot; &amp; Id, &quot;Open Report&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Summary Overview</label>
    <type>Text</type>
</CustomField>