force-app/main/default/objects/Account/fields/Management_Type__c.field-meta.xml
<CustomField>
    <fullName>Management_Type__c</fullName>
    <description>Maps to field MGMTTYPE in Customer Table within AccPac</description>
    <label>Management Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Franchise Network</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>Facilities Management</fullName>
            </value>
            <value>
                <fullName>Chains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>