force-app/main/default/objects/Account/fields/My_Team__c.field-meta.xml
<CustomField>
    <fullName>My_Team__c</fullName>
    <description>-used for filtering reports to show records owned by the running user&apos;s subordinates. 
-Salesforce OOTB report &quot;My Team&quot; filter will display records according to the Role Hierarchy. 
-needed solution to filter report records based on user.manager field instead</description>
    <formula>OR (
$User.Id = Owner.Manager.Id,
$User.Id =  Owner.Manager.ManagerId, 
$User.Id =   Owner.Manager.Manager.ManagerId 
)
 

/*When True =&gt; filters report to display record owned by your subordinates*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Team</label>
    <type>Checkbox</type>
</CustomField>