force-app/main/default/objects/Account/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <label>Number of Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>