force-app/main/default/objects/Account/fields/of_Floors__c.field-meta.xml
<CustomField>
    <fullName>of_Floors__c</fullName>
    <label># of Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>