force-app/main/default/objects/Account/fields/of_Sites_Location__c.field-meta.xml
<CustomField>
    <fullName>of_Sites_Location__c</fullName>
    <label># of Sites/Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>