force-app/main/default/objects/Account/fields/Old_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Number__c</fullName>
    <description>May contain an old customer number and/or location code and/or chain ID.</description>
    <label>Acquired Company Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>