force-app/main/default/objects/Account/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <description>Maps from HOLDREASON on the customer record in Sage.</description>
    <label>On Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Temporary Closure</fullName>
            </value>
            <value>
                <fullName>Permanent Closure</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>COVID 19</fullName>
            </value>
            <value>
                <fullName>COVID 19 - Omicron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>