force-app/main/default/objects/Account/fields/Order_Summary_Overview__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary_Overview__c</fullName>
    <formula>IF
(RecordType.Name = &apos;Customer Ship To&apos;,
 HYPERLINK(&quot;/one/one.app?source=alohaHeader#/sObject/00O3Z000005BXSZUA4/view?fv0=&quot; &amp; Id, &quot;Open Report&quot;), 
 HYPERLINK(&quot;/one/one.app?source=alohaHeader#/sObject/00O3Z000005BXSYUA4/view?fv0=&quot; &amp; Id, &quot;Open Report&quot;))</formula>
    <label>Order Summary Overview</label>
    <type>Text</type>
</CustomField>