force-app/main/default/objects/Account/fields/Other_Competitor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Competitor_Notes__c</fullName>
    <label>Other Competitor Notes</label>
    <type>TextArea</type>
</CustomField>