force-app/main/default/objects/Account/fields/Parent_A_P_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Parent_A_P_Contact_Email_Address__c</fullName>
    <description>Retrieves the Parent Account&apos;s Contact Email Address value.</description>
    <formula>Parent.Contact_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A/P Contact Email Address</label>
    <type>Text</type>
</CustomField>