force-app/main/default/objects/Account/fields/Parent_A_P_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_A_P_Contact_Full_Name__c</fullName>
    <formula>Parent.A_P_Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A/P Contact Full Name</label>
    <type>Text</type>
</CustomField>