force-app/main/default/objects/Account/fields/Parent_Account_ID_Casesafe__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_ID_Casesafe__c</fullName>
    <formula>CASESAFEID(Parent.Id)</formula>
    <label>Parent Account ID (Casesafe)</label>
    <type>Text</type>
</CustomField>