force-app/main/default/objects/Account/fields/Parent_Accpac_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Accpac_Account__c</fullName>
    <formula>Parent.AccPac_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Accpac Account#</label>
    <type>Text</type>
</CustomField>