force-app/main/default/objects/Account/fields/Parent_Billing_Attention__c.field-meta.xml
<CustomField>
    <fullName>Parent_Billing_Attention__c</fullName>
    <formula>Parent.Billing_Attention__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Attention</label>
    <type>Text</type>
</CustomField>