force-app/main/default/objects/Account/fields/Parent_Billing_Suite_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Billing_Suite_Number__c</fullName>
    <formula>Parent.Billing_Suite_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Suite Number</label>
    <type>Text</type>
</CustomField>