force-app/main/default/objects/Account/fields/Parent_Chain_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Chain_ID__c</fullName>
    <formula>Parent.Chain_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chain ID</label>
    <type>Text</type>
</CustomField>