force-app/main/default/objects/Account/fields/Parent_Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Parent_Invoice_Frequency__c</fullName>
    <formula>TEXT(Parent.Invoice_Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Frequency</label>
    <type>Text</type>
</CustomField>