force-app/main/default/objects/Account/fields/Parent_Invoice_Preference__c.field-meta.xml
<CustomField>
    <fullName>Parent_Invoice_Preference__c</fullName>
    <formula>TEXT(Parent.Invoice_Preference__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Preference</label>
    <type>Text</type>
</CustomField>