force-app/main/default/objects/Account/fields/Parent_Invoicing_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Parent_Invoicing_Email_Address__c</fullName>
    <formula>Parent.Invoicing_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Editable on Bill To Account only.</inlineHelpText>
    <label>Invoicing Email Address</label>
    <type>Text</type>
</CustomField>