force-app/main/default/objects/Account/fields/Parent_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Parent_Payment_Method__c</fullName>
    <formula>TEXT(Parent.Payment_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>