force-app/main/default/objects/Account/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Electronic Funds Transfer/Deposit</fullName>
            </value>
            <value>
                <fullName>Electronic Funds Transfer CIBC</fullName>
            </value>
            <value>
                <fullName>Paid by 3rd Party</fullName>
            </value>
            <value>
                <fullName>Master Card</fullName>
            </value>
            <value>
                <fullName>On Account</fullName>
            </value>
            <value>
                <fullName>Online Internet Banking</fullName>
            </value>
            <value>
                <fullName>Pre-Authorized Payment</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>