force-app/main/default/objects/Account/fields/PEST_Auditable__c.field-meta.xml
<CustomField>
    <fullName>PEST_Auditable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked it means the customer is &quot;PEST Auditable&quot; (assets scanned at individual level). If not it means customer is &quot;PEST Non-Auditable&quot;(assets scanned at room/location level)</inlineHelpText>
    <label>PEST Auditable</label>
    <type>Checkbox</type>
</CustomField>