force-app/main/default/objects/Account/fields/Pest_Control_OperatingHoursId__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control_OperatingHoursId__c</fullName>
    <formula>BLANKVALUE( Pest_Control_Operating_Hours__c , OperatingHoursId )</formula>
    <label>Pest Control OperatingHoursId</label>
    <type>Text</type>
</CustomField>