force-app/main/default/objects/Account/fields/PestPac__c.field-meta.xml
<CustomField>
    <fullName>PestPac__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for the PestPac - Available only for FSD profile</description>
    <label>PestPac</label>
    <type>Checkbox</type>
</CustomField>