force-app/main/default/objects/Account/fields/PO_Required_for_Orders__c.field-meta.xml
<CustomField>
    <fullName>PO_Required_for_Orders__c</fullName>
    <label>PO Required for Orders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PO Required Before</fullName>
            </value>
            <value>
                <fullName>PO Required After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>