force-app/main/default/objects/Account/fields/PO_Required_on_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>PO_Required_on_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Required on Line Item</label>
    <type>Checkbox</type>
</CustomField>