force-app/main/default/objects/Account/fields/Project_Leaf__c.field-meta.xml
<CustomField>
    <fullName>Project_Leaf__c</fullName>
    <label>Project Leaf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>