force-app/main/default/objects/Account/fields/Recurring_SO__c.field-meta.xml
<CustomField>
    <fullName>Recurring_SO__c</fullName>
    <description>Are there recurring Order Items associated with this Account?</description>
    <formula>Recurring_SO_Count__c  &gt; 0</formula>
    <inlineHelpText>Are there recurring Order Items associated with this Account?</inlineHelpText>
    <label>Recurring SO</label>
    <type>Checkbox</type>
</CustomField>