force-app/main/default/objects/Account/fields/Related_Standing_Order_Report__c.field-meta.xml
<CustomField>
    <fullName>Related_Standing_Order_Report__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O3Z0000050PfgUAE/view?fv0=&quot;&amp; Id, &quot;View AccPac Standing Orders&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Standing Order Report</label>
    <type>Text</type>
</CustomField>