force-app/main/default/objects/Account/fields/Report_Pest_Special_History__c.field-meta.xml
<CustomField>
    <fullName>Report_Pest_Special_History__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app?source=alohaHeader#/sObject/00O3Z0000050SyMUAU/view?fv0=&quot; &amp;  AccPac_Account__c , &quot;Open Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report: Pest Special History</label>
    <type>Text</type>
</CustomField>