force-app/main/default/objects/Account/fields/Report_Site_Survey_Overview__c.field-meta.xml
<CustomField>
    <fullName>Report_Site_Survey_Overview__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app?source=alohaHeader#/sObject/00Of1000004Q0BoEAK/view?fv0=&quot; &amp; Account_ID_Casesafe__c, &quot;Open Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report: Site Survey Overview</label>
    <type>Text</type>
</CustomField>